--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ Django==5.2.8
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 idna==3.11
+packaging==25.0
 PyJWT==2.10.1
 requests==2.32.5
 sqlparse==0.5.3
